--- a/services.html
+++ b/services.html
@@ -1,1 +1,164 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Services | Sowed Consulting, LLC</title>
+  <meta name="description" content="Salesforce consulting services: new org builds, revamps, data migration, CI/CD DevOps, and automation testing." />
+  <link rel="stylesheet" href="/assets/styles.css" />
+</head>
+<body>
+
+  <!-- Shared header injection point -->
+  <div id="site-header"></div>
+
+  <main class="page">
+    <div class="container page-hero">
+      <div class="page-kicker">Services</div>
+      <h1>Full-service Salesforce delivery, from foundation to release.</h1>
+      <p class="page-sub">
+        Whether you’re launching a new org or stabilizing a legacy environment, we help you ship
+        faster with clean architecture, trusted data, and predictable deployments.
+      </p>
+
+      <div class="page-actions">
+        <a class="btn btn-primary" href="/contact.html">Book a Call</a>
+        <a class="btn" href="#engagements">Engagement options</a>
+      </div>
+    </div>
+
+    <div class="container">
+      <section class="service-grid" aria-label="Service areas">
+        <article class="service-card">
+          <h2>New org builds & architecture</h2>
+          <p>
+            Stand up a scalable Salesforce foundation: data model, security model, environments,
+            and baseline automation standards.
+          </p>
+          <ul>
+            <li>Data model & object strategy</li>
+            <li>Profiles/perm sets & security architecture</li>
+            <li>Environment strategy (dev/test/stage/prod)</li>
+            <li>Automation patterns (Flow/Apex) & governance</li>
+          </ul>
+        </article>
+
+        <article class="service-card">
+          <h2>Revamp & modernization</h2>
+          <p>
+            Reduce tech debt and stabilize delivery by refactoring automation, improving performance,
+            and clarifying ownership and guardrails.
+          </p>
+          <ul>
+            <li>Flow/Apex refactor & consolidation</li>
+            <li>Data cleanup, dedupe, and normalization</li>
+            <li>Performance tuning & guardrails</li>
+            <li>Release governance & documentation</li>
+          </ul>
+        </article>
+
+        <article class="service-card">
+          <h2>Data migration & data management</h2>
+          <p>
+            Safe, repeatable migrations with clear mapping, validation, and a cutover plan that
+            minimizes operational disruption.
+          </p>
+          <ul>
+            <li>Source-to-target mapping & transformation rules</li>
+            <li>Load sequencing & referential integrity</li>
+            <li>Validation, reconciliation, and rollback plans</li>
+            <li>Tools: Data Loader, VS Code, SFDMU (as needed)</li>
+          </ul>
+        </article>
+
+        <article class="service-card">
+          <h2>DevOps & CI/CD standardization</h2>
+          <p>
+            Build a deployment motion you can trust: branching strategy, automated checks, and
+            a consistent release process across environments.
+          </p>
+          <ul>
+            <li>Branching strategy & PR policies</li>
+            <li>Pipeline setup (CI checks, validations)</li>
+            <li>Release standardization & environment parity</li>
+            <li>Packaging strategy where applicable</li>
+          </ul>
+        </article>
+
+        <article class="service-card">
+          <h2>Automation testing</h2>
+          <p>
+            Catch regressions early with an automation approach aligned to your org’s risk areas
+            and delivery cadence.
+          </p>
+          <ul>
+            <li>Regression suite design & smoke tests</li>
+            <li>Test data strategy for repeatability</li>
+            <li>Release gating and reporting</li>
+            <li>Fail-fast feedback loops for teams</li>
+          </ul>
+        </article>
+
+        <article class="service-card">
+          <h2>Enablement & operating model</h2>
+          <p>
+            Make the work sustainable: playbooks, documentation, and lightweight governance that
+            helps teams move fast without breaking things.
+          </p>
+          <ul>
+            <li>Standards: naming, automation, metadata ownership</li>
+            <li>Team workflows & handoff patterns</li>
+            <li>Admin/dev training & documentation</li>
+            <li>Backlog triage & delivery planning</li>
+          </ul>
+        </article>
+      </section>
+
+      <section id="engagements" class="engagements" aria-label="Engagement options">
+        <div class="engagements-inner">
+          <h2>Engagement options</h2>
+          <div class="engagement-grid">
+            <div class="eng-card">
+              <h3>Advisory / Architecture</h3>
+              <p>Short, high-impact guidance to unblock teams and set direction.</p>
+              <ul>
+                <li>Architecture review</li>
+                <li>Migration strategy</li>
+                <li>DevOps operating model</li>
+              </ul>
+            </div>
+
+            <div class="eng-card">
+              <h3>Project delivery</h3>
+              <p>Scoped work with a clear plan, milestones, and execution.</p>
+              <ul>
+                <li>New org build</li>
+                <li>Revamp / modernization</li>
+                <li>Data migration</li>
+              </ul>
+            </div>
+
+            <div class="eng-card">
+              <h3>Ongoing support</h3>
+              <p>Fractional capacity for continuous improvements and stability.</p>
+              <ul>
+                <li>Release support</li>
+                <li>Backlog execution</li>
+                <li>Quality & governance</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="eng-cta">
+            <a class="btn btn-primary" href="/contact.html">Talk to us</a>
+            <a class="btn btn-ghost" href="/">Back to home</a>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <script src="/assets/site.js"></script>
+</body>
+</html>
 
