--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sowed Consulting, LLC | Salesforce Consulting</title>
   <meta name="description" content="Full-service Salesforce consulting: new org builds, revamps, data migration, DevOps CI/CD standardization, and automation testing." />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
 
@@ -76,6 +76,6 @@
     </div>
   </main>
 
-  <script src="/assets/site.js"></script>
+  <script src="assets/site.js"></script>
 </body>
 </html>
