--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Services | Sowed Consulting, LLC</title>
   <meta name="description" content="Salesforce consulting services: new org builds, revamps, data migration, CI/CD DevOps, and automation testing." />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
 
@@ -158,7 +158,7 @@
     </div>
   </main>
 
-  <script src="/assets/site.js"></script>
+  <script src="assets/site.js"></script>
 </body>
 </html>
 
