--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact | Sowed Consulting, LLC</title>
   <meta name="description" content="Contact Sowed Consulting, LLC to discuss Salesforce architecture, data migration, DevOps CI/CD, and automation testing." />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
 
@@ -114,7 +114,7 @@
     </div>
   </main>
 
-  <script src="/assets/site.js"></script>
+  <script src="assets/site.js"></script>
 </body>
 </html>
 
